--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0",
-    "puppeteer": "^24.8.1"
+    "puppeteer": "^24.8.1",
+    "vercel": "^37.4.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
