--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sparticuz/chromium-min": "^133.0.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "puppeteer": "^24.8.1"
+    "puppeteer": "^24.8.1",
+    "puppeteer-core": "^24.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
