--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,10 @@
       "src": "index.js",
       "use": "@vercel/node",
       "config": {
-        "includeFiles": ["node_modules/@sparticuz/chromium-min/**"]
+        "maxLambdaSize": "50mb",
+        "includeFiles": [
+          "node_modules/@sparticuz/chromium-min/**"
+        ]
       }
     }
   ],
